--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>app</title>
-  </head>
-  <body>
-    <noscript>
-      <strong>We're sorry but app doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
-    </noscript>
-    <div id="app"></div>
-    <!-- built files will be auto injected -->
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no,minimal-ui">
+  <meta name="MobileOptimized" content="320">
+  <meta name="HandheldFriendly" content="true">
+  <meta name='apple-mobile-web-app-capable' content='yes' />
+  <meta name='full-screen' content='true' />
+  <meta name='x5-fullscreen' content='true' />
+  <meta name='360-fullscreen' content='true' />
+  <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+  <title>app</title>
+  <script>
+    'use strict';
+    (function (doc, win) {
+      var docEl = doc.documentElement, // 获取html对象
+        resizeEvt = 'orientationchange' in window ? 'orientationchange' : 'resize', // 横屏是否支持，不支持则为浏览器大小改变
+
+        // 计算页面字体大小
+        recalc = function () {
+          // 获取页面宽度
+          var clientWidth = docEl.clientWidth;
+          // 获取不到页面宽度，直接返回
+          if (!clientWidth) return;
+          // 设置html字体大小(浏览器默认字体大小为16px)
+          docEl.style.fontSize = clientWidth / 375 * 16 + "px";
+        };
+      // 不支持addEventListener,返回
+      if (!doc.addEventListener) return;
+      // 监听事件，获取当前html标签的字体大小
+      win.addEventListener(resizeEvt, recalc, false);
+      // dom内容加在完成事件
+      doc.addEventListener('DOMContentLoaded', recalc, false);
+    })(document, window);
+  </script>
+</head>
+
+<body>
+  <noscript>
+    <strong>We're sorry but app doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+  </noscript>
+  <div id="app"></div>
+  <!-- <script src="cordova.js"></script> -->
+  <!-- built files will be auto injected -->
+</body>
+
 </html>
